--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "extract-loader": "^5.1.0",
     "fibers": "^5.0.0",
     "file-loader": "^6.2.0",
+    "file-system": "^2.2.2",
+    "fs": "0.0.1-security",
     "mini-css-extract-plugin": "^1.4.0",
     "postcss": "^8.3.0",
     "postcss-loader": "^5.2.0",
