--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "fibers": "^5.0.0",
     "file-loader": "^6.2.0",
     "file-system": "^2.2.2",
-    "fs": "0.0.1-security",
     "mini-css-extract-plugin": "^1.4.0",
+    "node-sass": "^6.0.1",
     "postcss": "^8.3.0",
     "postcss-loader": "^5.2.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
+    "style-loader": "^3.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.39.1",
     "webpack-cli": "^4.6.0",
