--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "serve": "NODE_ENV=development webpack serve --config webpack.dev.js ",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm run build",
-    "start": "NODE_ENV=production webpack --watch --config webpack.dev.js",
+    "start": "NODE_ENV=production webpack serve --config webpack.common.js",
     "watch": "NODE_ENV=development webpack --watch --config webpack.dev.js ",
     "build": "NODE_ENV=production webpack --config webpack.prod.js"
   },
