--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
   "author": "matthew barnes",
   "license": "ISC",
   "dependencies": {
-    "d3": "^7.0.0",
-    "underscore": "^1.13.1",
     "@babel/core": "^7.13.14",
     "@babel/plugin-proposal-optional-chaining": "^7.13.12",
     "@babel/polyfill": "^7.12.1",
@@ -28,6 +26,9 @@
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.0",
+    "d3": "^7.0.0",
+    "emailjs": "^3.5.0",
+    "emailjs-com": "^3.1.0",
     "extract-loader": "^5.1.0",
     "fibers": "^5.0.0",
     "file-loader": "^6.2.0",
@@ -39,6 +40,7 @@
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^3.0.0",
+    "underscore": "^1.13.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.39.1",
     "webpack-cli": "^4.6.0",
@@ -46,5 +48,3 @@
     "webpack-merge": "^5.7.3"
   }
 }
-
-
