--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm run build",
     "start": "NODE_ENV=production webpack serve --config webpack.common.js",
     "watch": "NODE_ENV=development webpack --watch --config webpack.dev.js ",
-    "build": "NODE_ENV=production webpack --config webpack.prod.js"
+    "build": "NODE_ENV=production webpack --config webpack.prod.js",
+    "test": "mocha test --timeout 10000"
   },
   "author": "matthew barnes",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.12",
     "@babel/runtime": "^7.14.6",
+    "assert": "^2.0.0",
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.0",
@@ -34,11 +36,13 @@
     "file-loader": "^6.2.0",
     "file-system": "^2.2.2",
     "mini-css-extract-plugin": "^1.4.0",
+    "mocha": "^9.1.1",
     "node-sass": "^6.0.1",
     "postcss": "^8.3.0",
     "postcss-loader": "^5.2.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
+    "selenium-webdriver": "^4.0.0-beta.4",
     "style-loader": "^3.0.0",
     "underscore": "^1.13.1",
     "url-loader": "^4.1.1",
