--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.12",
     "@babel/runtime": "^7.14.6",
+    "@types/node": "^16.7.10",
     "assert": "^2.0.0",
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
@@ -44,6 +45,8 @@
     "sass-loader": "^11.0.1",
     "selenium-webdriver": "^4.0.0-beta.4",
     "style-loader": "^3.0.0",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.5.0-dev.20210901",
     "underscore": "^1.13.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.39.1",
