--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "call-sheet",
   "version": "1.0.0",
   "description": "movie data visualizer",
-  "main": "index.js",
+  "main": "index.ts",
   "browserslist": [
     "last 1 version",
     "> 1%",
@@ -45,6 +45,7 @@
     "sass-loader": "^11.0.1",
     "selenium-webdriver": "^4.0.0-beta.4",
     "style-loader": "^3.0.0",
+    "ts-loader": "^9.2.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.5.0-dev.20210901",
     "underscore": "^1.13.1",
